ui/module fixes